--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Github Pages repository for my personal website, which can be accessed at joshuawolfsohn.engineer
+Github Pages repository for my personal website, which can be accessed at joshuawolfsohn.com
